Add Paketo-style JVM memory calculator to the Memory panel
The Memory panel previously recommended -Xmx derived from
MemoryMXBean.getHeapMemoryUsage().getMax() rounded up to 256 MB.
Without an explicit -Xmx, the JVM defaults that value to ~25% of host
RAM, so a 32 GB Mac silently produced an -Xmx8192m recommendation. That
is the JVM's host-derived default, not a useful production hint, and
the previous calculation ignored metaspace, code cache, direct memory,
and thread stacks entirely.

Replaced the simplistic rounding with a Paketo libjvm-style memory
calculator: heap = total - headRoom - directMem - metaspace - codeCache
- stack x threads. Defaults mirror libjvm exactly (10 MiB direct, 240
MiB code cache, 1 MiB stack, 250 thread floor, 0% headroom, metaspace =
14 MB + 5800 B x classes). BootUI improves on the buildpack by sourcing
the loaded-class count from ClassLoadingMXBean directly (no 0.35
build-time factor needed) and applying a 1.25 safety factor on top to
account for lazy class loading after the panel opens.

The Memory panel now exposes total memory, thread count, and headroom
as inputs; the API accepts them as query parameters and recomputes
server-side so the live class/thread counts stay authoritative. The
default total memory is derived from the app's observed footprint and
clamped to 384 MB - 2 GB so a large dev host no longer poisons the
recommendation.

On the sample app the recommended Xmx drops from 8192m to 502m, with a
visible stacked breakdown of where the rest of the container budget
goes. UseCompactObjectHeaders is gated on JDK 25+ (JEP 519); -Xms is
set equal to -Xmx for predictable container startup; G1 flips to ZGC
above 4 GiB heap.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>